--- a/kubernit_node1.yaml
+++ b/kubernit_node1.yaml
@@ -187,7 +187,8 @@ files:
   - path: etc/kubeadm/
     directory: true
   - path: etc/sysctl.d/01-kubernetes.conf
-    contents: 'net.ipv4.ip_forward = 1'
+    contents: |
+      net.ipv4.ip_forward = 1
   - path: etc/cni/net.d
     directory: true
   - path: opt/cni/bin
