--- a/kubernit_storage0.yaml
+++ b/kubernit_storage0.yaml
@@ -306,7 +306,7 @@ files:
   - path: etc/kubeadm/join
     contents: ""
   - path: etc/kubeadm/kubeadm.yaml
-    source: config/node/kubeadm.yaml
+    source: config/storage/kubeadm.yaml
   - path: etc/kubelet.sh.conf
     contents: |
       KUBELET_ARGS="--node-ip=192.168.58.13 --node-labels=node-role.kubernetes.io/storage"
